# OS-learning

./: README.md
learn_rust_the_hard_way/functions/: functions.c
learn_rust_the_hard_way/structs/: structs.c
learn_rust_the_hard_way/switch_match/: README.md  ex13_switch.c
notes/: README.md
notes/OS_notes/: memory.md
notes/lab_notes/: lab1_notes.md  lab2_notes.md
rCore-labs/lab0/: rust-toolchain
rCore-labs/lab0/os/: Cargo.toml  Makefile
rCore-labs/lab0/os/.cargo/: config
rCore-labs/lab0/os/src/: linker.ld  main.rs  sbi.rs
rCore-labs/lab1/os/: Cargo.toml
rCore-labs/lab1/os/src/: entry.asm  main.rs  sbi.rs
rCore-labs/lab1/os/src/interrupt/: context.rs  handler.rs  interrupt.asm
rCore-labs/lab2/os/: Cargo.toml
rCore-labs/lab2/os/src/: main.rs
rCore-labs/lab2/os/src/algorithm/: Cargo.toml
rCore-labs/lab2/os/src/algorithm/src/: lib.rs
rCore-labs/lab2/os/src/interrupt/: context.rs  handler.rs  mod.rs  timer.rs
rCore-labs/lab2/os/src/memory/: address.rs  config.rs  heap.rs  mod.rs
rCore-labs/lab2/os/src/memory/frame/: frame_tracker.rs  mod.rs
rCore-labs/notes/: lab0_notes.md  lab1_notes.md
rust_exercises/: fmt_out.rs  tips.md
rust_learning/branches/: Cargo.toml
rust_learning/chapter2/: Cargo.toml
rust_learning/enums/: Cargo.toml
rust_learning/errors/: Cargo.toml
rust_learning/functions/: Cargo.toml
rust_learning/guessing_game/: Cargo.toml
rust_learning/hello_cargo/: Cargo.toml
rust_learning/iterators/: Cargo.toml
rust_learning/minigrep/: Cargo.toml
rust_learning/oo/: Cargo.toml
rust_learning/ownership/: Cargo.toml
(+31 files in other folders)
