[package]
name = "os"
version = "0.1.0"
authors = ["lyf"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# stop directly when panic, because we did not implement the function of stack expansion
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"