[package]
name = "os"
version = "0.1.0"
authors = ["lyfzero <u201811495@hust.edu.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-sam"]}

# panic 时直接终止，无堆栈展开的功能
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"